# mysql-to-sqlite3

./: .buildinfo  .coveragerc  .flake8  .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.html  README.md  genindex.html  index.html  modules.html  mysql2sqlite.py  mysql_to_sqlite3.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.py  tox.ini
.doctrees/: README.doctree  environment.pickle  index.doctree  modules.doctree  mysql_to_sqlite3.doctree
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker.yml  publish.yml  test.yml
.travis/: initdb.sh
_modules/: collections.html  index.html  re.html
_modules/mysql_to_sqlite3/: click_utils.html  debug_info.html  mysql_utils.html  sqlite_utils.html  transporter.html  types.html
_sources/: README.rst.txt  index.rst.txt
docs/: README.rst  conf.py  index.rst  modules.rst  mysql_to_sqlite3.rst  requirements.txt
mysql_to_sqlite3/: __init__.py  __version__.py  cli.py  click_utils.py  debug_info.py  sixeptions.py  sqlite_utils.py  transporter.py  types.py
skills/mysql-to-sqlite3/: SKILL.md
src/mysql_to_sqlite3/: __init__.py  cli.py  click_utils.py  data_transfer.py  debug_info.py  mysql_utils.py  schema_writer.py  sqlite_utils.py  transporter.py  type_translation.py  types.py
tests/: conftest.py  database.py  factories.py  models.py  sixeptions.py  utils.py
tests/func/: mysql_to_sqlite3_test.py  test_cli.py
tests/unit/: mysql_to_sqlite3_test.py  test_build_create_table_sql_sqlglot_identifiers.py  test_cli_error_paths.py  test_cli_views_flag.py  test_click_utils.py  test_collation_sqlglot_augmented.py  test_create_and_transfer_reconnect.py  test_create_view_reconnect_and_errors.py  test_debug_info.py  test_defaults_sqlglot_enhanced.py  test_indices_prefix_and_uniqueness.py  test_mysql_utils.py  test_sqlite_utils.py  test_transporter.py  test_types_and_defaults_extra.py  test_types_fallback.py  test_types_sqlglot_augmented.py  test_views_build_paths_extra.py  test_views_create_view.py  test_views_sqlglot.py
